# bazel_cxx20_modules_demo

./: README.md
hello_fmt/: BUILD.bazel  MODULE.bazel  README.md  build.sh  fix.patch  main.cc
hello_std_module/: .bazelrc  MODULE.bazel  README.md  build.sh  setup.sh
hello_std_module/basic/: BUILD.bazel  main.cc
hello_std_module/hello-world/: BUILD.bazel
hello_std_module/module-library/: BUILD.bazel
hello_std_module/multi_src_module/: BUILD.bazel  main.cc
hello_std_module/template-module/: BUILD.bazel
hello_std_module/transitive/: BUILD.bazel
hello_world/: BUILD.bazel  MODULE.bazel  README.md  foo.cppm
